--- a/To_Do_List/Dockerfile
+++ b/To_Do_List/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 # Mount node_modules from PVC to avoid re-installing
 COPY package*.json ./
-RUN if [ ! -d "/node_modules" ]; then npm ci; else echo "Using cached node_modules"; fi
+RUN npm ci
 COPY . .
 RUN npm run build
 
