--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -9,81 +9,191 @@ pipeline {
   }
 
   environment {
-    DOCKERHUB_USERNAME = 'inestmimi123'
-    DOCKERHUB_IMAGE = 'todo-backend'
-    IMAGE_TAG = 'latest'
-    DOCKER_BUILDKIT = '1'
-  }
+      DOCKERHUB_USERNAME = 'inestmimi123'
+      DOCKERHUB_IMAGE = 'todo-backend'
+      IMAGE_TAG = "${env.BUILD_NUMBER}-${env.GIT_COMMIT.take(7)}"
+      DOCKER_BUILDKIT = '1'
+      WORKSPACE_PVC_PATH = '/mnt/workspace_cache'
+      DOCKER_CACHE_PVC_PATH = '/var/lib/docker'
+      ARTIFACTS_PVC_PATH = '/mnt/artifacts'
+    }
 
-  stages {
-    stage('Checkout & Cache Preparation') {
-      steps {
+    stages {
+      stage('Workspace Setup & Cache Restoration') {
+        steps {
+          container('node') {
+            script {
+              sh '''
+                echo "=== Setting up workspace with PVC cache ==="
+
+                # Restore workspace from PVC if available
+                if [ -d "${WORKSPACE_PVC_PATH}/backend-build" ]; then
+                  echo "Restoring workspace from PVC..."
+                  rsync -av --delete ${WORKSPACE_PVC_PATH}/backend-build/ ./ || {
+                    echo "Failed to restore workspace, proceeding with empty workspace"
+                  }
+                else
+                  echo "No workspace cache found, starting fresh"
+                  mkdir -p ${WORKSPACE_PVC_PATH}/backend-build
+                fi
+              '''
+            }
+          }
+        }
+      }
+
+      stage('Dependencies Installation') {
+        steps {
+          container('node') {
+            dir('To_Do_List_Backend') {
+              script {
+                sh '''
+                  echo "=== Installing dependencies with cache ==="
+
+                  # Check and install dependencies if needed
+                  if [ -f "package.json" ]; then
+                    if [ -d "${WORKSPACE_PVC_PATH}/backend-build/node_modules" ]; then
+                      echo "Restoring node_modules from PVC cache..."
+                      ln -s ${WORKSPACE_PVC_PATH}/backend-build/node_modules ./node_modules || {
+                        echo "Failed to link node_modules, proceeding with installation"
+                      }
+                    fi
+
+                    # Install or update dependencies
+                    if [ -d "node_modules" ] && [ "$(npm outdated --json | jq length)" -gt 0 ]; then
+                      echo "Outdated dependencies detected, updating..."
+                      rm -rf node_modules/*
+                      npm ci
+                    elif [ ! -d "node_modules" ]; then
+                      echo "No node_modules found, performing initial installation..."
+                      npm ci
+                    else
+                      echo "node_modules cache is valid, skipping installation"
+                    fi
+
+                    # Persist node_modules to PVC
+                    if [ -d "node_modules" ] && [ ! -L "node_modules" ]; then
+                      echo "Persisting node_modules to PVC..."
+                      rsync -av --delete node_modules/ ${WORKSPACE_PVC_PATH}/backend-build/node_modules/ || {
+                        echo "Failed to persist node_modules"
+                      }
+                    fi
+                  else
+                    echo "No package.json found, skipping dependency installation"
+                  fi
+                '''
+              }
+            }
+          }
+        }
+      }
+
+      stage('Docker Login') {
+        steps {
+          container('docker') {
+            withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
+              sh '''
+                echo "$PASSWORD" | docker login -u "$USERNAME" --password-stdin || {
+                  echo "Docker login failed"
+                  exit 1
+                }
+              '''
+            }
+          }
+        }
+      }
+
+      stage('Build Backend Image') {
+        steps {
+          container('docker') {
+            dir('To_Do_List_Backend') {
+              script {
+                sh '''
+                  echo "=== Building Docker image with BuildKit ==="
+                  DOCKER_BUILDKIT=1 docker build \
+                    --build-arg BUILDKIT_INLINE_CACHE=1 \
+                    --cache-from ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest \
+                    -t ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:${IMAGE_TAG} \
+                    -t ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest \
+                    . || {
+                      echo "Docker build failed"
+                      exit 1
+                    }
+                '''
+              }
+            }
+          }
+        }
+      }
+
+      stage('Push to Docker Hub') {
+        steps {
+          container('docker') {
+            sh '''
+              echo "=== Pushing Docker images ==="
+              docker push ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:${IMAGE_TAG} || {
+                echo "Failed to push ${IMAGE_TAG}"
+                exit 1
+              }
+              docker push ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest || {
+                echo "Failed to push latest"
+                exit 1
+              }
+            '''
+          }
+        }
+      }
+
+      stage('Cache Persistence & Cleanup') {
+        steps {
+          container('node') {
+            script {
+              sh '''
+                echo "=== Persisting workspace and artifacts ==="
+
+                # Persist workspace to PVC
+                mkdir -p ${WORKSPACE_PVC_PATH}/backend-build
+                rsync -av --delete ./ ${WORKSPACE_PVC_PATH}/backend-build/ || {
+                  echo "Failed to persist workspace"
+                }
+
+                # Save build artifacts
+                if [ -d "To_Do_List_Backend/dist" ]; then
+                  echo "Saving build artifacts..."
+                  mkdir -p ${ARTIFACTS_PVC_PATH}/build-${BUILD_NUMBER}
+                  cp -r To_Do_List_Backend/dist/* ${ARTIFACTS_PVC_PATH}/build-${BUILD_NUMBER}/ || {
+                    echo "Failed to save artifacts"
+                  }
+                else
+                  echo "No dist directory found, skipping artifact persistence"
+                fi
+              '''
+            }
+          }
+          container('docker') {
+            sh '''
+              echo "=== Cleaning up Docker resources ==="
+              docker system prune -f --filter "until=24h" || {
+                echo "Docker cleanup failed"
+              }
+            '''
+          }
+        }
+      }
+    }
+
+    post {
+      always {
         script {
           sh '''
-            echo "Using persistent workspace at /workspace/backend-build"
-            mkdir -p /workspace/backend-build
-            cp -r . /workspace/backend-build/ || true
+            echo "=== Pipeline completed ==="
           '''
         }
       }
-    }
-
-    stage('Docker Login') {
-      steps {
-        withCredentials([usernamePassword(credentialsId: 'dockerhub-creds', usernameVariable: 'USERNAME', passwordVariable: 'PASSWORD')]) {
-          sh '''
-            echo "$PASSWORD" | docker login -u "$USERNAME" --password-stdin
-          '''
-        }
+      success {
+        echo "Backend image built and pushed successfully with optimized PVC caching!"
+      }
+      failure {
+        echo "Backend pipeline failed."
       }
     }
-
-    stage('Build Backend Image') {
-      steps {
-        dir('To_Do_List_Backend') {
-          sh '''
-            echo "Building with Docker BuildKit and local cache..."
-            DOCKER_BUILDKIT=1 docker build \
-              --build-arg BUILDKIT_INLINE_CACHE=1 \
-              -t $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG \
-              .
-          '''
-        }
-      }
-    }
-
-
-    stage('Push to Docker Hub') {
-      steps {
-        sh '''
-          echo "Pushing images..."
-          docker push $DOCKERHUB_USERNAME/$DOCKERHUB_IMAGE:$IMAGE_TAG
-        '''
-      }
-    }
-
-    stage('Cache Cleanup') {
-      steps {
-        sh '''
-          echo "Cleaning up old Docker images to preserve cache space..."
-          docker system prune -f --filter "until=24h"
-        '''
-      }
-    }
-  }
-
-  post {
-    always {
-      sh '''
-        echo "Saving build artifacts to persistent storage..."
-        cp -r . /workspace/backend-build-$(date +%Y%m%d-%H%M%S)/ || true
-      '''
-    }
-    success {
-      echo "Backend image built and pushed successfully with persistent cache!"
-    }
-    failure {
-      echo "Build or push failed."
-    }
-  }
-}
