add config jenkinsfile_backend

--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -18,6 +18,15 @@ pipeline {
   }
 
   stages {
+  stage('Checkout') {
+    steps {
+      checkout([
+        $class: 'GitSCM',
+        branches: [[name: '*/k8s-backend-optimisation']],              // branche à récupérer (ici main)
+        userRemoteConfigs: [[url: 'https://github.com/ines312692/ToDoList.git']]
+      ])
+    }
+  }
     stage('Workspace info') {
       steps {
         container('node') {
@@ -81,6 +90,7 @@ pipeline {
               echo "=== Building Docker image with BuildKit ==="
               DOCKER_BUILDKIT=1 docker build \
                 --build-arg BUILDKIT_INLINE_CACHE=1 \
+                --cache-from ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest \
                 -t ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:${IMAGE_TAG} \
                 -t ${DOCKERHUB_USERNAME}/${DOCKERHUB_IMAGE}:latest .
             '''
